# svelte-rust-boilerplate

./: .gitignore  README.md  package.json
client/: package-lock.json  package.json  snowpack.config.json  snowpack.config.mjs
client/src/: App.svelte
server/: Cargo.toml
server/src/: main.rs
