[package]
name = "server"
version = "0.1.0"
authors = ["Adityo Pratomo <pratomo.adityo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["macros"] }
warp = "0.2"
pretty_env_logger = "*"
